[tool.poetry]
name = "tradepy"
version = "0.1.0"
description = ""
authors = ["Di Lu"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10.4"
pandas = "^1.5.3"
akshare = "^1.9.2"
tqdm = "^4.65.0"
xlrd = "^2.0.1"
fuzzywuzzy = "^0.18.0"
Levenshtein = "^0.20.9"
openpyxl = "^3.1.1"
plotly = "^5.13.1"
python-dateutil = "^2.8.2"
matplotlib = "^3.7.1"
networkx = "^3.0"
numba = "^0.56.4"
colorlog = "^6.7.0"
pygraphviz = "^1.10"
python-dotenv = "^1.0.0"
redis = "^4.5.2"
loguru = "^0.6.0"
celery = {extras = ["redis"], version = "^5.2.7"}
fastapi = "^0.95.0"
uvicorn = {extras = ["standard"], version = "^0.21.1"}
pydantic = "^1.10.7"
ta-lib = "0.4.24"
quantstats = "^0.0.59"

[tool.poetry.extras]
bot = ["celery"]
broker = ["fastapi", "uvicorn", "pydantic"]

[tool.poetry.group.dev.dependencies]
ipython = "^8.11.0"
jupyterlab = "^3.6.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
